Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16127

mroonga/storage.* tests fail with GCC 8

    XMLWordPrintable

Details

    Description

      It seems that GCC8 causes some mroonga/storage.* tests to fail.

      Failing tests:

      • mroonga/storage.index_multiple_column_range_all_used_less_than
      • mroonga/storage.index_multiple_column_range_all_used_less_than_or_equal
      • mroonga/storage.index_multiple_column_range_partially_used_have_prefix_less_than
      • mroonga/storage.index_multiple_column_range_partially_used_have_prefix_less_than_or_equal
      • mroonga/storage.index_multiple_column_range_partially_used_no_prefix_less_than
      • mroonga/storage.index_multiple_column_range_partially_used_no_prefix_less_than_or_equal
      • mroonga/storage.optimization_order_limit_optimized_datetime_less_than
      • mroonga/storage.optimization_order_limit_optimized_datetime_less_than_or_equal

      I'm attaching 2 build logs: The first is for MariaDB built with GCC 7 (no mroonga/storage.* tests are failing), the second is the same MariaDB version built with GCC 8 (8 mroonga/storage.* tests are failing).

      Btw. According to [1] (the list of tests that should be skipped) it seems that Fedora is facing the same problem.

      [1] https://src.fedoraproject.org/rpms/mariadb/blob/master/f/rh-skipped-tests-base.list

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              kstreitova Kristyna Streitova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.